[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtlePlus2"
version = "1.0.0"
authors = [
    {name = "AliceDrop", email = "alice.drop.ace@icloud.com"},
]
description = "An enhanced drawing toolkit of turtle."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["turtlePlus2"]

[project.urls]
Repository = "https://github.com/Alice-Drop/turtlePlus"